test: e2e Rust integration test
I've split it off into a separate crate to keep things tidy. NixOS test
runs the test.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "krait-agent",
     "krait-common",
     "krait-ebpf",
+    "krait-tests",
 ]
 default-members = ["krait-agent", "krait-common"]
 
